simplify document api with single-arg constructor